Mower Web Socket Client - implemantation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.SocketTestActivity"></activity>
+        <activity android:name=".activities.TestLogActivity"></activity>
     </application>
 
 </manifest>
