--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ def verNameFull() {
 }
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '23.0.3'
 
     defaultConfig {
@@ -45,10 +45,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
     testCompile 'junit:junit:4.12'
-
-    compile "org.java-websocket:Java-WebSocket:1.3.0"
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
 }
